--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Compositional Visual Generation and Inference with Energy Based Models</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
-<meta property="og:image" content="fig/comp_cartoon.pdf"/>
+<meta property="og:image" content="https://energy-based-model.github.io/compositional-generation-inference/comp_cartoon.pdf"/>
 <meta property="og:title" content="Compositional Visual Generation and Inference with Energy Based Models" />
 
 <script src="lib.js" type="text/javascript"></script>
@@ -58,8 +58,8 @@ BODY {
   <sup>2</sup> OpenAI
 </h2></center>
 <center><h2><strong><a href="">Paper</a> | <a href="">PyTorch code</a></strong> </h2></center>
-<center><a href="fig/comp_cartoon.pdf">
-<img src="fig/comp_cartoon.pdf" width="1000"> </a></center>
+<center><a href="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.pdf">
+<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.pdf" width="1000"> </a></center>
 <p></p>
 
 
@@ -136,7 +136,7 @@ We can further define object level compositionality, by
 
 <h2>Continual Learning</h2>
 
-<a href=""><img style="float: left; padding: 10px; PADDING-RIGHT: 30px;" alt="paper thumbnail" src="fig/paper_thumbnail.jpg" width=170></a>
+<a href=""><img style="float: left; padding: 10px; PADDING-RIGHT: 30px;" alt="paper thumbnail" src="https://energy-based-model.github.io/compositional-generation-inference//paper_thumbnail.jpg" width=170></a>
 <br>
 
 We can further use our approach to incremently learn new concepts to 
