--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Compositional Visual Generation and Inference with Energy Based Models</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
-<meta property="og:image" content="https://energy-based-model.github.io/compositional-generation-inference/comp_cartoon.pdf"/>
+<meta property="og:image" content="https://energy-based-model.github.io/compositional-generation-inference/comp_cartoon.jpeg"/>
 <meta property="og:title" content="Compositional Visual Generation and Inference with Energy Based Models" />
 
 <script src="lib.js" type="text/javascript"></script>
