--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Compositional Visual Generation and Inference with Energy Based Models</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
-<meta property="og:image" content="https://energy-based-model.github.io/compositional-generation-inference/comp_cartoon.jpeg"/>
+<meta property="og:image" content="https://energy-based-model.github.io/compositional-generation-inference/comp_cartoon.jpg"/>
 <meta property="og:title" content="Compositional Visual Generation and Inference with Energy Based Models" />
 
 <script src="lib.js" type="text/javascript"></script>
@@ -58,8 +58,8 @@ BODY {
   <sup>2</sup> OpenAI
 </h2></center>
 <center><h2><strong><a href="">Paper</a> | <a href="">PyTorch code</a></strong> </h2></center>
-<center><a href="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.pdf">
-<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.pdf" width="1000"> </a></center>
+<center><a href="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.jpg">
+<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.jpg" width="1000"> </a></center>
 <p></p>
 
 
@@ -84,7 +84,7 @@ We can generate data from an EBM by implicit sampling through Langevin dynamics,
 
 By defining generation through such a manner, we can compose generation across different EBMs learned on attributes of position, size, color, gender, hair style, and age, through the symbolic operators of conjunction, disjunction, and negation. 
 
-<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.pdf" width="1000"> </a></center>
+<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.jpg" width="1000"> </a></center>
 
 In particular, we consider a set of independently trained EBMs, \(E(\tilde{x}|c_1), E(\tilde{x}|c_2), \ldots,  E(\tilde{x}|c_n)\), which are learned conditional distributions on underlying latent codes $c_i$. Latent codes we consider include position, size, color, gender, hair style, and age, which we also refer to as concepts.
 
