--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Through our implicit sampling procedure, by assuming partition functions are equ
 
 By definely particular combinations of EBMs trained on male, smiling, and black haired faces, we are able to obtain generations shown below:
 
-<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/venn.pdf" width="1000"> </a></center>
+<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/venn.jpg" width="800"> </a></center>
 
 <h2>Compositional Generations</h2>
 
