--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ We can generate data from an EBM by implicit sampling through Langevin dynamics,
 
 By defining generation through such a manner, we can compose generation across different EBMs learned on attributes of position, size, color, gender, hair style, and age, through the symbolic operators of conjunction, disjunction, and negation. 
 
-<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.jpg" width="1000"> </a></center>
+<!-- <img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.jpg" width="1000"> </a></center> -->
 
 In particular, we consider a set of independently trained EBMs, \(E(\tilde{x}|c_1), E(\tilde{x}|c_2), \ldots,  E(\tilde{x}|c_n)\), which are learned conditional distributions on underlying latent codes $c_i$. Latent codes we consider include position, size, color, gender, hair style, and age, which we also refer to as concepts.
 
@@ -124,7 +124,7 @@ Through our implicit sampling procedure, by assuming partition functions are equ
 
 By definely particular combinations of EBMs trained on male, smiling, and black haired faces, we are able to obtain generations shown below:
 
-<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/venn.jpg" width="800"> </a></center>
+<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/venn.jpg" width="1000"> </a></center>
 
 <h2>Compositional Generations</h2>
 
