--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ BODY {
   <sup>2</sup> OpenAI
 </h2></center>
 <center><h2><strong><a href="">Paper</a> | <a href="">PyTorch code</a></strong> </h2></center>
-<center><a href="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.jpg">
+<center><a>
 <img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.jpg" width="1000"> </a></center>
 <p></p>
 
