--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Compositional Visual Generation and Inference with Energy Based Models</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
-<meta property="og:image" content="https://energy-based-model.github.io/compositional-generation-inference/comp_cartoon.jpg"/>
+<meta property="og:image" content="fig/comp_cartoon.jpg"/>
 <meta property="og:title" content="Compositional Visual Generation and Inference with Energy Based Models" />
 
 <script src="lib.js" type="text/javascript"></script>
@@ -59,7 +59,7 @@ BODY {
 </h2></center>
 <center><h2><strong><a href="">Paper</a> | <a href="">PyTorch code</a></strong> </h2></center>
 <center><a>
-<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/comp_cartoon.jpg" width="1000"> </a></center>
+<img src="fig/comp_cartoon.jpg" width="1000"> </a></center>
 <p></p>
 
 
@@ -74,12 +74,12 @@ BODY {
 
 
 <!-- ---------------------------------------------------------------------------------- -->
-<a href=""><img style="float: left; padding: 10px; PADDING-RIGHT: 30px;" alt="paper thumbnail" src="https://energy-based-model.github.io/compositional-generation-inference/fig/paper_thumbnail.jpg" width=170></a>
+<a href=""><img style="float: left; padding: 10px; PADDING-RIGHT: 30px;" alt="paper thumbnail" src="fig/paper_thumbnail.jpg" width=170></a>
 <br>
 
 
 <h2>Paper</h2>
-<p><a href="https://energy-based-model.github.io/compositional-generation-inference/fig/paper.pdf">arxiv</a>,  2019. </p>
+<p><a href="fig/paper.pdf">arxiv</a>,  2019. </p>
 
 
 
@@ -145,7 +145,7 @@ Through our implicit sampling procedure, by assuming partition functions are equ
 
 By definely particular combinations of EBMs trained on male, smiling, and black haired faces, we are able to obtain generations shown below:
 
-<img src="https://energy-based-model.github.io/compositional-generation-inference/fig/venn.jpg" width="1000"> </a></center>
+<img src="fig/venn.jpg" width="1000"> </a></center>
 
 
 
