--- a/index.html
+++ b/index.html
@@ -58,22 +58,23 @@ BODY {
   <sup>2</sup> OpenAI
 </h2></center>
 <center><h2><strong><a href="">Paper</a> | <a href="">PyTorch code</a></strong> </h2></center>
-
-
 <br>
+
+
 <center><a>
-<img src="fig/comp_cartoon.jpg" width="1000"> </a></center>
-<p></p>
-
-
+<img src="fig/comp_cartoon.jpg" width="1000"> 
+</a></center>
 <br>
+
+
+
 <p>
 <h2>Abstract</h2>
 
 <div style="font-size:14px"><p align="justify">
   A vital aspect of human intelligence is the ability to compose increasingly complex concepts out of simpler ideas, enabling both rapid learning and adaptation of knowledge. In this paper we show that energy-based models can exhibit this ability by directly combining probability distributions. Samples from the combined distribution correspond to compositions of concepts. For example, given a distribution for smiling faces, and another for male faces, we can combine them to generate smiling male faces. This allows us to generate natural images that simultaneously satisfy conjunctions, disjunctions, and negations of concepts. We evaluate compositional generation abilities of our model on the CelebA dataset of natural faces and synthetic 3D scene images. We also demonstrate other unique advantages of our model, such as the ability to continually learn and incorporate new concepts, or infer compositions of concept properties underlying an image.
-</p></div>
-
+</div>
+</p>
 
 
 
